Fix a bug in loading css styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,9 @@
-@import 'partials/_reset.css';
-@import 'partials/_header.css';
-@import 'partials/_hero.css';
-@import 'partials/_about.css';
-@import 'partials/_projects.css';
-@import 'partials/_skills.css';
-@import 'partials/_contact.css';
-@import 'partials/_footer.css';
-@import 'partials/_responsive.css';
+@import 'partials/reset.css';
+@import 'partials/header.css';
+@import 'partials/hero.css';
+@import 'partials/about.css';
+@import 'partials/projects.css';
+@import 'partials/skills.css';
+@import 'partials/contact.css';
+@import 'partials/footer.css';
+@import 'partials/responsive.css';
