Refactor project structure and update files
- Moved HTML files (`about.html`, `contact.html`, `projects.html`, `skills.html`) to `src/html`.
- Created new CSS files (`animation.css`, `contact.css`, `hero.css`, `projects.css`, `typography.css`) and organized them into `src/css/partials`.
- Created JavaScript file `intro-animation.js` and added it to `src/javascript`.
- Added new profile picture (`1736438546991.jpg`) for the portfolio.
- Added GIF (`miss-you-heart.gif`) for cosmetic purposes.
- Updated references in `index.html` and `main.js` to reflect new file paths.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,3 +7,5 @@
 @import 'partials/contact.css';
 @import 'partials/footer.css';
 @import 'partials/responsive.css';
+@import "partials/typography.css";
+@import "partials/animation.css";
