--- a/src/css/partials/contact.css
+++ b/src/css/partials/contact.css
@@ -27,7 +27,7 @@
 
 .contact button {
     padding: 0.8rem 2rem;
-    background: #1abc9c;
+    background: #169f84;
     color: #fff;
     border: none;
     border-radius: 5px;
