Update and organize portfolio project
- Updated HTML files: about.html, contact.html, index.html, projects.html, and skills.html.
- Improved and Added CSS structure: main.css, sections.css, icons.css, and testimonials.css.
- Added and Enhanced interactivity with JavaScript: intro-animation.js and dynamic-testimonials.js.
- Added visual assets: lines-pattern.png.
- Organized and cleaned up project structure for better maintainability.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,3 +9,6 @@
 @import 'partials/responsive.css';
 @import "partials/typography.css";
 @import "partials/animation.css";
+@import "partials/icons.css";
+@import "partials/testimonials.css";
+@import "partials/sections.css";
