Add dynamic projects preview on the page "projects.html" and edit quick sections

--- a/src/css/partials/contact.css
+++ b/src/css/partials/contact.css
@@ -120,8 +120,8 @@ header .logo {
     display: inline-block;
     padding: 0.8rem 2rem;
     font-size: 1rem;
-    color: #ffffff;
-    background: #1abc9c;
+    color: #169f84;
+    background: #ffffff;
     border: none;
     border-radius: 8px;
     cursor: pointer;
