--- a/src/css/partials/icons.css
+++ b/src/css/partials/icons.css
@@ -2,14 +2,14 @@
     text-align: center;
     padding: 1rem;
     background: #ffffff;
-    color: #284152;
+    color: #ffffff;
 }
 .social a {
-    color: #284152;
+    color: #ffffff;
     margin: 0 0.5rem;
     font-size: 1.5rem;
     text-decoration: none;
 }
 .social a:hover {
-    color: #169f84;
+    color: #e66ea3;
 }
