--- a/src/css/partials/animation.css
+++ b/src/css/partials/animation.css
@@ -4,8 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #169f84;
-    color: white;
+    background: #ffffff;
+    color: #e66ea3;
     display: flex;
     justify-content: center;
     align-items: center;
