--- a/src/css/partials/footer.css
+++ b/src/css/partials/footer.css
@@ -1,7 +1,7 @@
 /* Footer */
 footer {
-    background: #2c3e50;
-    color: #fff;
+    background: #ffffff;
+    color: #5f5f5f;
     text-align: center;
     padding: 1rem 0;
 }
