Add dark mode and a inverted log

--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,4 @@
 @import "partials/animation.css";
 @import "partials/icons.css";
 @import "partials/sections.css";
+@import "partials/darkmode.css";
